# Fixproof

./: .gitignore  README.md  pyproject.toml
examples/vulnerable_express_app/: app.js  package.json
fixproof/: __init__.py  browser_crawler.py  cli.py  crawler.py  discover.py  form_builder.py  guard.py  preflight.py  reporter.py  retest.py  route_discovery.py  session_store.py  surface_mapper.py
fixproof/checks/: __init__.py  cookies.py  csrf.py  headers.py  sqli.py  xss.py
tests/: __init__.py  test_guard.py  test_retest.py  test_session_store.py  test_sqli.py  test_surface_mapper.py  test_xss.py
