[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixproof"
version = "1.0.0"
description = "Localhost-only offensive validation and retest tool for developers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
    "Jinja2>=3.1",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
fixproof = "fixproof.cli:app"

[tool.setuptools.packages.find]
include = ["fixproof*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
